fix: fix overflow on login & registration pages

--- a/src/pages/login/login-styles.css
+++ b/src/pages/login/login-styles.css
@@ -19,6 +19,7 @@
   position: absolute;
   z-index: -1;
   opacity: 0;
+  max-width: 100px;
 }
 .login__show-pw-label::before {
   content: '';
