--- a/src/pages/registration/registration-styles.css
+++ b/src/pages/registration/registration-styles.css
@@ -112,6 +112,7 @@ h1 {
   position: absolute;
   z-index: -1;
   opacity: 0;
+  max-width: 100px;
 }
 
 .registration__show-pw-label::before {
